# IEX-Datalord

./: README.md  pyproject.toml
iex_datalord/: lsiexdumps.py
