[tool.poetry]
name = "iex-datalord"
version = "0.1.0"
description = "Save IEX best quotes and trades to QuestDB"
authors = ["Amit Goren"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
parse-iex = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
