[tool.poetry]
name = "iex-datalord"
version = "0.1.0"
description = "Save IEX best quotes and trades to QuestDB"
license = "BSD-2-Clause"
authors = ["Amit Goren"]
readme = "README.md"
repository = "https://github.com/mmatamm/iex-datalord.git"
keywords = ["IEX", "Datalord"]

[tool.poetry.dependencies]
python = "^3.10"
parse-iex = "^0.1.1"
httpx = "^0.23.0"
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
